注释添加测试

--- a/XHVolunteeriOS/Base.lproj/Main.storyboard
+++ b/XHVolunteeriOS/Base.lproj/Main.storyboard
@@ -1672,7 +1672,7 @@
         <image name="setting" width="19" height="19"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="zWP-aT-ciX"/>
         <segue reference="UEa-ga-Mu4"/>
-        <segue reference="WZc-eS-g75"/>
     </inferredMetricsTieBreakers>
 </document>
